<resources>
    <string name="HelpInfo_title">Functions</string>
    <string name="app_name">ColorOSTool</string>
    <string name="xposed_description">ColorOS 12 Enhansments</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="safecenter_header">Security Center</string>
    <string name="launcher_header">System Launcher</string>
    <string name="packageinstaller_header">Package Installer</string>
    <string name="gamespace_header">Game Assistant</string>
    <string name="systemui_header">System UI</string>
    <string name="system_settings_header">Settings</string>
    <string name="android_header">System Framework</string>
    <string name="costool_about">About</string>
    <string name="costool_settings">Moudle Settings</string>

    <!-- safecenter Preferences -->
    <string name="startup_title">Startup limit</string>
    <string name="startup_summary">Allow more than 5 apps to startup.</string>

    <!-- launcher Preferences -->
    <string name="app_lock_title">App lock</string>
    <string name="app_lock_summary">Allow more than 5 apps to be locked in recent tasks panel.</string>
    <string name="launcher_layout_title">Launcher layout expansion</string>
    <string name="launcher_layout_summary">More launcher layout options(3x5 ~ 6x7).</string>
    <string name="launcher_update_dot_title">App update dot</string>
    <string name="launcher_update_dot_summary">Undisplay a dot next to the name of updated apps.</string>

    <!-- packageinstaller Preferences -->
    <string name="aosp_installer_title">Replace APK installer</string>
    <string name="aosp_installer_summary_on">Current: AOSP apk installer.</string>
    <string name="aosp_installer_summary_off">Current: ColorOS apk installer.</string>
    <string name="safe_installer_title">Safe verification</string>
    <string name="safe_installer_summary">Disable the scan of apk and sometimes account verification.</string>
    <string name="installer_ads_title">UI Cleaner</string>
    <string name="installer_ads_summary">Rmove the banner that jump to app store.</string>
    <string name="installer_warn_title">Installation warnings</string>
    <string name="installer_warn_summary">Remove pre-installation warnings (about low version, different signature, etc.).</string>

    <!-- helpInfo Preferences -->
    <string name="HelpInfo_summary">Note: The relevant function will take effect only after forcibly stopping the corresponding application.</string>

    <!-- gamespace Preferences -->
    <string name="root_checker_title">Game filters</string>
    <string name="root_checker_summary">Game filters can be enabled after rooted</string>
    <string name="gs_view_cleaner_title">UI cleaner</string>
    <string name="gs_view_cleaner_summary">remove 5d service splash screen animation and some buttons.</string>

    <!-- systemui Preferences -->
    <string name="lock_red_one_title">Red one</string>
    <string name="lock_red_one_summary">Disable the red one on lock screen.</string>
    <string name="charging_ripple_title">Charging ripple</string>
    <string name="charging_ripple_summary">Enable Charging ripple of Android 12.</string>

    <!-- Not Active Module Warning -->
    <string name="not_supported">It looks like your Lsposed is too old or not activated, Pls try again after updating or avtivating Lsposed.</string>
    <string name="ignore">Ignore</string>

    <!-- settings Preferences -->
    <string name="more_dark_mode_title">Dark mode</string>
    <string name="more_dark_mode_summary">Add all of the user`s app to the dark mode list of third-party apps.</string>
    <string name="all_120hz_title">Global 120Hz</string>
    <string name="all_120hz_summary">Just enter “Settings - Display&amp;brightness - Screen refresh rate” after enable this.</string>

    <!-- android Preferences -->
    <string name="usb_install_title">Remove the double check</string>
    <string name="usb_install_summary">Remove the double check when installing via adb, silent installation in the background.</string>

    <!-- colorOSTool Preferences -->
    <string name="hide_icon_title">Hide this app icon</string>
    <string name="reboot_phone">Need to reboot</string>
    <string name="tg_title">TG Group</string>
    <string name="tg_summary">Tap to join our telegram group</string>
    <string name="tg_group_url">https://t.me/ColorOSTool</string>
    <string name="author">Author</string>
    <string name="author_list">Oosl (fankes, lc5900)</string>
    <string name="github_url">https://github.com/Oosl</string>
    <string name="remove_oppo_default_app_title">Unrestrict some default applications</string>
    <string name="remove_oppo_default_app_summary">Unlock OPPO\'s restrictions on default apps</string>
    <string name="developer_notification_title">Developer Mode Notification</string>
    <string name="developer_notification_summary">Hide the notification when developer mode enabled</string>
</resources>
