<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/systemui_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="lock_red_one"
            app:title="@string/lock_red_one_title"
            app:summary="@string/lock_red_one_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="charging_ripple"
            app:title="@string/charging_ripple_title"
            app:summary="@string/charging_ripple_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="developer_notification"
            app:title="@string/developer_notification_title"
            app:summary="@string/developer_notification_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>