<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/launcher_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="app_lock"
            app:title="@string/app_lock_title"
            app:summary="@string/app_lock_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

<!--        <SwitchPreferenceCompat-->
<!--            app:key="launcher_layout"-->
<!--            app:title="@string/launcher_layout_title"-->
<!--            app:summary="@string/launcher_layout_summary"-->
<!--            app:defaultValue="false"-->
<!--            app:iconSpaceReserved="false"/>-->

        <SwitchPreferenceCompat
            app:key="launcher_update_dot"
            app:title="@string/launcher_update_dot_title"
            app:summary="@string/launcher_update_dot_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>